little adjusments for profile

--- a/client/app/templates/components/we-state-city-simple-selector.hbs
+++ b/client/app/templates/components/we-state-city-simple-selector.hbs
@@ -5,6 +5,7 @@
     selection=selectedStateObject
     optionValuePath="content.code"
     optionLabelPath="content.name"
+    classNames="form-control"
     }}
 </span>
 
@@ -16,5 +17,6 @@
     optionValuePath="content.name"
     optionLabelPath="content.name"
     disabled=citySelectIsDisabled
+    classNames="form-control"    
     }}
 </span>
