update location fields

--- a/server/templates/forms/location/city.hbs
+++ b/server/templates/forms/location/city.hbs
@@ -34,6 +34,18 @@
     })
   {{/if}}
 
+  // only suport pt-br cities and states
+  // TODO add suport to others regions
+  $('#{{formId}} [name="{{field.formCountryFieldName}}"]')
+  .change(function(){
+    if ($(this).val() !== 'BR') {
+      citySelector.val(null);
+      citySelector.parent().hide();
+    } else {
+      citySelector.parent().show();
+    }
+  });
+
   we.components.select.init('#{{fieldId}}', {
     searchField: 'name',
     cache: true,
