--- a/server/templates/forms/location/country.hbs
+++ b/server/templates/forms/location/country.hbs
@@ -1,1 +1,29 @@
-<input id="{{fieldId}}" name="{{name}}" type="hidden" value="{{value}}">
+<div class="form-group {{#if error}}has-error has-feedback{{/if}}">
+  <label for="{{fieldId}}">{{t fieldName}} {{#ifCond field.allowNull false}}*{{/ifCond}}</label>
+  {{{field-help-error error}}}
+
+  <select id="{{fieldId}}" name="{{name}}"
+    class="form-control" {{fieldAttrs}}
+    {{#if field.formFieldMultiple}}multiple="multiple"{{/if}}>
+      <option value="{{value}}">{{value}}</option>
+  </select>
+
+  <p class="help-block">{{t help}}</p>
+  {{{field-help-error error}}}
+</div>
+
+<script>$(document).ready(function() {
+  we.components.select.init('#{{fieldId}}', {
+    searchField: 'name',
+    cache: true,
+    url: function () { return '/api/v1/location'; },
+    processResults: function (data, params) {
+      if (!data || !data.lcountry) return {};
+      return {
+        results: data.lcountry.map(function(r, i) {
+          return { text: r.name, id: r.code };
+        })
+      };
+    }
+  });
+});</script>
